--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
               <p class="course">BA in English and History, 2008</p>
-              <p class="institution">Massachusetts Institute of Technology</p>
+              <p class="institution">University of Limerick</p>
             </div>
           </li>
           
