--- a/project/external-project/index.html
+++ b/project/external-project/index.html
@@ -1058,6 +1058,15 @@
 
   
   
+  <div class="article-widget content-widget-hr">
+    <h3>Related</h3>
+    <ul>
+      
+      <li><a href="/project/corona-testers/">UK Coronavirus Test Providers Dashboard</a></li>
+      
+    </ul>
+  </div>
+  
 
 
 
