--- a/dh_tutorials.html
+++ b/dh_tutorials.html
@@ -167,7 +167,8 @@ summary {
 </div>
 
 
-<p>For this workshop I’ve put together a series of short tutorials, with varying levels of difficult, based on three typical digital humanities techniques. You won’t have time to go through all of these today, but feel free to bookmark the page and return to them later!</p>
+<p>For this workshop I’ve put together a series of short tutorials, with varying levels of difficulty, based on three typical digital humanities techniques.</p>
+<p>You won’t have time to go through all of these today, but feel free to bookmark the page and return to them later!</p>
 <p>If you’d like to try ‘text mining’, applying quantitative analysis to large datasets of text, click <a href="https://yann-ryan.github.io/text_mining_voyant">here</a>.</p>
 <p>If you’d like to try out mapping and spatial analysis, click <a href="https://yann-ryan.github.io/maps_tutorial_gui">here</a>.</p>
 <p>If you’d like to try out network analysis, click <a href="https://yann-ryan.github.io/network_analysis_palladio">here</a>.</p>
